--- a/pom.xml
+++ b/pom.xml
@@ -2,5 +2,16 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.emma</groupId>
   <artifactId>emma-shared-interfaces</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2-SNAPSHOT</version>
+  
+  <dependencies>
+  		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>${swagger-core-version}</version>
+		</dependency>
+  </dependencies>
+  	<properties>
+		<swagger-core-version>1.5.3</swagger-core-version>
+	</properties>
 </project>
